[package]
name = "party_panel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
quest_hook = { git = "https://github.com/Fernthedev/quest-hook-rs.git", features = ["il2cpp_v31"], branch = "cordl-fixes"}
scotland2_rs = { git = "https://github.com/QuestPackageManager/scotland2_rs.git", tag = "v0.2.0"}
# quest_hook = { path = "../quest-hook-rs", features = ["il2cpp_v31"]}
tracing = "*"
# bs_cordl = { path = "./codegen-rs", features = [
bs_cordl = { git = "https://github.com/QuestPackageManager/bs-cordl-rust.git", tag = "v4000.0.0", features = [
"UnityEngine+GameObject",
"UnityEngine+Color",
"MainMenuViewController",
"TMPro+TextMeshPro",
"BeatmapDataItem",
"StandardLevelScenesTransitionSetupDataSO",
# "SettingsManager",
"IReadonlyBeatmapData"
]}

[workspace]

members = [
    # "bs_cordl",
]