[package]
name = "party_panel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
# bindgen = "0.71"
# cbindgen = "0.27"
cc = "1.2"
prost-build = "0.13.4"
qpm_cli = { git = "https://github.com/QuestPackageManager/QPM.CLI.git", default-features = false}


[dependencies]
quest_hook = { git = "https://github.com/Fernthedev/quest-hook-rs.git", features = [
    "il2cpp_v31",
], branch = "cordl-fixes" }
scotland2_rs = { git = "https://github.com/QuestPackageManager/scotland2_rs.git", tag = "v0.2.0" }

tokio-tungstenite = "*"
tokio = { version = "1", features = [
    "io-util",
    "net",
    "time",
    "macros",
    "sync",
    "fs",
    "rt",
    "rt-multi-thread",
    "parking_lot",
], default-features = false }
futures = "0.3"

# quest_hook = { path = "../quest-hook-rs", features = ["il2cpp_v31"]}
tracing = "*"
# bs_cordl = { path = "./codegen-rs", features = [
bs_cordl = { git = "https://github.com/QuestPackageManager/bs-cordl-rust.git", features = [
    "StandardLevelScenesTransitionSetupDataSO",
    "BeatmapLevelPack",
    "MainFlowCoordinator",
    "SoloFreePlayFlowCoordinator",
    "System+Threading+CancellationTokenSource",
    "UnityEngine+Resources",
    "AdditionalContentModel",
    "StandardLevelReturnToMenuController",
    "MainThreadDispatcher",
    "System+Linq+Enumerable"
] }
bytes = "1.9.0"

prost = "0.13"
# Only necessary if using Protobuf well-known types:
prost-types = "0.13"
itertools = "0.14.0"

[workspace]

members = [
    # "bs_cordl",
]
